# sdl3-sample

./: .gitmodules  CMakeLists.txt  README.md  build.gradle
.github/workflows/: android-build.yml  build.yml  web-build.yml
android/: CMakeLists.txt  build.gradle
config/: README.md  config-generic.sh  config-ios-xcode.sh  config-mac-xcode.sh  config-tvos-xcode.sh  config-uwp.bat  config-visionos-xcode.sh  config-web-unix.sh  config-web-win.bat  config-win.bat
src/: Info.plist.in  Sample.appxManifest  attributions.txt  iosLaunchScreen.storyboard  main.cpp
